--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res2" alt="">
+                            <img src="assets/img/digital.png" class="img-res2" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Arduino Based Digital Scale</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -255,7 +255,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
+                            <img src="assets/img/digital2.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Flutter Ordering App</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
+                            <img src="assets/img/digital3.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>MAKARA MH4XX</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -273,7 +273,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
+                            <img src="assets/img/digital4.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>MAKARA X</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -282,7 +282,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
+                            <img src="assets/img/digital5.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Syringe Pump</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -348,7 +348,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+            <img class="img-res" src="assets/img/digital.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">
@@ -369,7 +369,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+            <img class="img-res" src="assets/img/digital2.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Flutter ordering app</h4>
@@ -388,7 +388,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-4.jpg" alt="">
+            <img class="img-res" src="assets/img/digital3.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Unmanned Surface Vehicle (MAKARA MH44XX)</h4>
@@ -407,7 +407,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
+            <img class="img-res" src="assets/img/digital4.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Autonomous Underwater Vehicle(MAKARA X)</h4>
@@ -426,7 +426,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+            <img class="img-res" src="assets/img/digital5.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Syringe Pump</h4>
